removed some deprecated methods