@@ -508,7 +508,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(double value) throws JSONException {
-		Double d = new Double(value);
+		Double d = Double.valueOf(value);
 		JSONObject.testValidity(d);
 		put(d);
 		return this;
@@ -521,7 +521,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(int value) {
-		put(new Integer(value));
+		put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -532,7 +532,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(long value) {
-		put(new Long(value));
+		put(Long.valueOf(value));
 		return this;
 	}
 
@@ -576,7 +576,7 @@ public class JSONArray {
 	 *                       finite.
 	 */
 	public JSONArray put(int index, double value) throws JSONException {
-		put(index, new Double(value));
+		put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -591,7 +591,7 @@ public class JSONArray {
 	 * @throws JSONException If the index is negative.
 	 */
 	public JSONArray put(int index, int value) throws JSONException {
-		put(index, new Integer(value));
+		put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -606,7 +606,7 @@ public class JSONArray {
 	 * @throws JSONException If the index is negative.
 	 */
 	public JSONArray put(int index, long value) throws JSONException {
-		put(index, new Long(value));
+		put(index, Long.valueOf(value));
 		return this;
 	}
 
@@ -739,9 +739,7 @@ public class JSONArray {
 	 * return a Java List *
 	 */
 	public ArrayList toList() {
-		ArrayList exportList = new ArrayList<>(myArrayList); // export a copy to avoid external manipulations of the
-																// JSONArray
-		return exportList;
+		return new ArrayList<>(myArrayList);
 	}
 
 }
